Förkortade en print-rad i Uppgift0.ipynb

--- a/Niklas/Uppgift0.ipynb
+++ b/Niklas/Uppgift0.ipynb
@@ -754,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 151,
    "id": "2e53f862",
    "metadata": {},
    "outputs": [
@@ -766,7 +766,7 @@
       "Japan har tagit 309 silver, varav kvinnorna står för 109st (35.28%) och männen står för 200st (64.72%).\n",
       "Japan har tagit 357 brons, varav kvinnorna står för 120st (33.61%) och männen står för 237st (66.39%).\n",
       "Totalt är det 4067 japaner som deltagit i OS, varav 1264 är kvinnor (31.08%) och 2803 är män (68.92%).\n",
-      "Kvinnorna (31.08%) har tagit 67.03% av medaljerna och männen (68.92%) har tagit 67.03% av medaljerna\n"
+      "Kvinnorna (31.08%) har tagit 32.97% av medaljerna och männen (68.92%) har tagit 67.03% av medaljerna\n"
      ]
     }
    ],
@@ -780,6 +780,9 @@
     "japan_silver_m = japan_silver[japan_silver['Sex'] == 'M']\n",
     "japan_brons_f = japan_brons[japan_brons['Sex'] == 'F']\n",
     "japan_brons_m = japan_brons[japan_brons['Sex'] == 'M']\n",
+    "japan_medalj = len(japan_guld) + len(japan_silver) + len(japan_brons)\n",
+    "japan_medalj_f = len(japan_guld_f) + len(japan_silver_f) + len(japan_brons_f)\n",
+    "japan_medalj_m = len(japan_guld_m) + len(japan_silver_m) + len(japan_brons_m)\n",
     "antal_jap = os_japaner['ID'].nunique()\n",
     "antal_jap_f = japanskor['ID'].nunique()\n",
     "antal_jap_m = japaner['ID'].nunique()\n",
@@ -787,7 +790,7 @@
     "print(f'Japan har tagit {len(japan_silver)} silver, varav kvinnorna står för {len(japan_silver_f)}st ({len(japan_silver_f)/len(japan_silver)*100:.2f}%) och männen står för {len(japan_silver_m)}st ({len(japan_silver_m)/len(japan_silver)*100:.2f}%).')\n",
     "print(f'Japan har tagit {len(japan_brons)} brons, varav kvinnorna står för {len(japan_brons_f)}st ({len(japan_brons_f)/len(japan_brons)*100:.2f}%) och männen står för {len(japan_brons_m)}st ({len(japan_brons_m)/len(japan_brons)*100:.2f}%).')\n",
     "print(f'Totalt är det {antal_jap} japaner som deltagit i OS, varav {antal_jap_f} är kvinnor ({antal_jap_f/antal_jap*100:.2f}%) och {antal_jap_m} är män ({antal_jap_m/antal_jap*100:.2f}%).')\n",
-    "print(f'Kvinnorna ({antal_jap_f/antal_jap*100:.2f}%) har tagit {japaner['Medal'].value_counts().sum()/os_japaner['Medal'].value_counts().sum()*100:.2f}% av medaljerna och männen ({antal_jap_m/antal_jap*100:.2f}%) har tagit {japaner['Medal'].value_counts().sum()/os_japaner['Medal'].value_counts().sum()*100:.2f}% av medaljerna')"
+    "print(f'Kvinnorna ({antal_jap_f/antal_jap*100:.2f}%) har tagit {japan_medalj_f/japan_medalj*100:.2f}% av medaljerna och männen ({antal_jap_m/antal_jap*100:.2f}%) har tagit {japan_medalj_m/japan_medalj*100:.2f}% av medaljerna')"
    ]
   },
   {
